玩了下idea的FindDugs